<resources>
    <string name="app_name">Android_Full_FTMS</string>
    <string name="action_settings">Settings</string>
    <string name="equipmentpagebutton">Equipment</string>
    <string name="supplypagebutton">Supplies</string>
    <string name="staffpagebutton">Staff</string>
    <string name="menupagebutton">Menu</string>
    <string name="orderpagebutton">Order</string>
    <string name="schedulepagebutton">Schedule</string>
    <string name="title_activity_equipment">EquipmentActivity</string>
    <string name="title_activity_supply">SupplyActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_staff">StaffActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="newequipmentname_hint">Equipment Name</string>
    <string name="newequipmentquantity_hint">Quantity</string>
    <string name="newequipment_button">Add Equipment</string>
    <string name="newsupplyname_hint">Supply Name</string>
    <string name="newsupplyquantity_hint">Quantity</string>
    <string name="newsupply_button">Add Supply</string>
    <string name="newsupplydescription_hint">Description</string>
    <string name="newequipmentdescription_hint">Description</string>
    <string name="managerbutton">Manager</string>
    <string name="staffbutton">Staff</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="title_activity_staff_page">StaffPageActivity</string>
    <string name="supply1spinner_label">Supply 1:</string>
    <string name="supply2spinner_label">Supply 2:</string>
    <string name="supply3spinner_label">Supply 3:</string>
    <string name="supply4spinner_label">Supply 4:</string>
    <string name="newmenuitem_hint">Name</string>
    <string name="newMenuItem_button">Add To Menu</string>
    <string name="title_activity_detailed_menu">DetailedMenuActivity</string>
    <string name="goToDetailedMenuPage_button">Detailed Menu</string>
    <string name="newstaffname_hint">Name</string>
    <string name="newstaffposition_hint">Position</string>
    <string name="newstaff_button">Add Employee</string>
    <string name="menuitem1spinner_label">Item 1:</string>
    <string name="menuitem2spinner_label">Item 2:</string>
    <string name="menuitem3spinner_label">Item 3:</string>
    <string name="menuitem4spinner_label">Item 4:</string>
    <string name="neworder_button">Add Order</string>
    <string name="gotohistory_button">Order History</string>
    <string name="title_activity_order_history">OrderHistoryActivity</string>
    <string name="gotosupply_button">Supplies</string>
    <string name="staffspinner_label">Employee:</string>
    <string name="newschedule_date_label">Date?</string>
    <string name="newschedule_date_first">Choose Date</string>
    <string name="newschedule_starttime_label">Start Time?</string>
    <string name="newschedule_starttime_first">Choose Start Time</string>
    <string name="newschedule_endtime_label">End Time?</string>
    <string name="newschedule_endtime_first">Choose End Time</string>
    <string name="newschedule_button">Add Time Block</string>
    <string name="gotoschedule_button">Check Weekly Schedules</string>
    <string name="title_activity_detailed_schedule">DetailedScheduleActivity</string>
    <string name="employeespinner_label">Employee:</string>
    <string name="refreshschedule_button">Check Schedule</string>
    <string name="title">Food Truck Management</string>
</resources>
