<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.android_full_ftms.ScheduleActivity"
    tools:showIn="@layout/activity_schedule">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Assign New Schedule"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="left"
            android:layout_marginBottom="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fScheduleLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="10dp">
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/staffspinner_label"/>
            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_gravity="end"
                android:id="@+id/staffspinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newschedule_date_label"/>

            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_gravity="end"
                android:id="@+id/dayspinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/newschedule_starttime_label"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newschedule_starttime_first"
                android:layout_gravity="end"
                android:id="@+id/newschedule_starttime"
                android:onClick="showTimePickerDialog"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/newschedule_endtime_label"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newschedule_endtime_first"
                android:layout_gravity="end"
                android:id="@+id/newschedule_endtime"
                android:onClick="showTimePickerDialog"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <Button
            android:backgroundTint="@color/peach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newschedule_button"
            android:layout_gravity="end"
            android:onClick="addTimeBlock"
            android:layout_marginBottom="20dp"/>

        <Button
            android:backgroundTint="@color/peach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gotoschedule_button"
            android:layout_gravity="end"
            android:onClick="goToDetailedSchedule"/>

    </LinearLayout>

</RelativeLayout>
