<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_supply"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.android_full_ftms.SupplyActivity"
    tools:showIn="@layout/activity_supply">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Add Supplies"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="left"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fSuppliesNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="10dp">
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newsupply_name"
            android:hint="@string/newsupplyname_hint"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newsupply_quantity"
            android:hint="@string/newsupplyquantity_hint"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newsupply_description"
            android:hint="@string/newsupplydescription_hint"/>

        <Button
            android:backgroundTint="@color/peach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsupply_button"
            android:layout_gravity="end"
            android:onClick="addSupply"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Supplies"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="left"/>

        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="fill_parent"
            android:fillViewport="true">

            <ListView
                android:id="@+id/supplieslist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#b5b5b5"
                android:gravity="center"
                android:dividerHeight="1dp"/>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
